--- a/index.html
+++ b/index.html
@@ -1,18 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="icon" type="image" href="images/Toast copy.png"/>
-    <link href="style.css" href="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Document</title>
+      <link rel="icon" type="image" href="images/Logo.png"/>
+      <link href="style.css" rel="stylesheet"/>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    </head>
+  <body id="body">
+    
+    <nav class="nav navbar navbar-expand-lg navbar-light sticky-top border border-3 border-dark">
+      <a class="navbar-brand" href="index.html"><img src="Images/Logo.png" alt="Toast To Boast" height="50px" width="50px"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link text-light" href="menu.html">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="orders.html">Order</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="contact.html">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="locations.html">Locations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="about_us.html">About Us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade mb-5" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="mx-auto" style="width: 100%;">
+            <!--The image used as a placeholder was taken by Abe Livi @livi2750-->
+            <img src="images/Toast_Special.png" class="d-block w-100" alt="Try" height="780px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="mx-auto" style="width: 100%;">
+            <!--The image used as a placeholder was taken by Lucy Heath @capyurebylucy-->
+            <img src="images/Pie-Special.png" class="d-block w-100" alt="Our" height="780px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="mx-auto" style="width: 100%;">
+            <!--The image used as a placeholder was taken by Fausto Marques @faustomarques-->
+            <img src="images/Muffin_Special.png" class="d-block w-100" alt="Toast" height="780px">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+
+    <div class="card mb-3 mt-3 ml-3 mr-3 float-left info text-light border rounded-pill border-light" style="max-width: 100%;">
+      <div class="row g-0">
+        <div class="col-md-4 border border-1 border-light float-left">
+          <!--The image used as a placeholder was taken by Greta Punch @gretap-->
+          <img src="images/Menu_Display.png" alt="Look At Our Menu" height="350px" width="100%">
+        </div>
+        <div class="mx-auto" style="width: 800px;">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title  fs-1">Menu</h5>
+            <p class="card-text fs-4">See all the incredible options you have to select from.</p>
+            <a class="btn btn-primary btn-dark position-absolute top-100 start-50 translate-middle" href="menu.html" role="button">Menu</a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3 mt-3 ml-3 mr-3 float-right info text-light border rounded-pill border-light" style="max-width: 100%;">
+      <div class="row g-0 ">
+        <div class="mx-auto" style="width: 800px;">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title fs-1">About Us</h5>
+            <p class="card-text fs-4">Learn about the people that bring everyone some well deserved toast daily</p>
+            <a class="btn btn-primary btn-dark position-absolute top-100 start-50 translate-middle" href="about_us.html" role="button">About US</a>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-4 border border-1 border-light">
+          <!--The image used as a placeholder was taken by Maranda Vandergriff @mkvandergriff-->
+          <img src="images/AboutUs_Display.png" alt="Learn More About Us" height="350px" width="100%">
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3 mt-3 ml-3 mr-3 float-left info text-light border rounded-pill border-light" style="max-width: 100%;">
+      <div class="row g-0 ">
+        <div class="col-md-4 border border-1 border-light">
+          <!--The image used as a placeholder was taken by Andy Falconer @andyfalconerphotography-->
+          <img src="images/Location_Display.png" alt="See the Locations of Our Bakery" height="350px" width="100%">
+        </div>
+        <div class="mx-auto" style="width: 800px;">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title fs-1">Locations</h5>
+            <p class="card-text fs-4">Discover the location of your local Toast to Boast bakeries</p>
+            <a class="btn btn-primary btn-dark position-absolute top-100 start-50 translate-middle" href="locations.html" role="button">Location</a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3 mt-3 ml-3 mr-3 float-right info text-light border rounded-pill border-light" style="max-width: 100%;">
+      <div class="row g-0 ">
+        <div class="mx-auto" style="width: 800px;">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title fs-1">Job Oportunities</h5>
+            <p class="card-text fs-4">See if there are any jobs available at your local Toast to Boast bakery</p>
+            <a class="btn btn-primary btn-dark position-absolute top-100 start-50 translate-middle disabled" href="applications.html" role="button">Applications</a>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-4 border border-1 border-light">
+          <!--The image used as a placeholder was taken by Chris Liverani @chrisliverani-->
+          <img src="images/Hiring_Display.png" alt="Check to See if We're Hiring" height="350px" width="100%">
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3 mt-3 ml-3 mr-3 float-left info text-light border rounded-pill border-light" style="max-width: 100%;">
+      <div class="row g-0 ">
+        <div class="col-md-4 border border-1 border-light">
+          <!--The image used as a placeholder was taken by Brian Wangenheim @brianisalive-->
+          <img src="images/ContactUs_Display.png" alt="Give us A Call" height="350px" width="100%">
+        </div>
+        <div class="mx-auto" style="width: 800px;">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title fs-1">Contact Us</h5>
+            <p class="card-text fs-4">Need any help? Find out how you can reach the people at Toast to Boast</p>
+            <a class="btn btn-primary btn-dark position-absolute top-100 start-50 translate-middle" href="contact.html" role="button">Contact</a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-5 mt-3 ml-3 mr-3 float-right info text-light border rounded-pill border-light" style="max-width: 100%;">
+      <div class="row g-0 ">
+        <div class="mx-auto" style="width: 800px;">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title fs-1">Order</h5>
+            <p class="card-text fs-4">Unable to visit Toast to Boast personally? Order online and have your toast delivered</p>
+            <a class="btn btn-primary btn-dark position-absolute top-100 start-50 translate-middle" href="order.js" role="button">Order</a>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-4 border border-1 border-light">
+          <!--The image used as a placeholder was taken by Kai Pilger @kaip-->
+          <img src="images/Order_Display.png" alt="See how you can place an order" height="350px" width="100%">
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="card info">
+        <div class="card-header" style="height: 50px;">
+            <h3 class="position-absolute top-0 start-0 ml-3">FAQs</h3>
+            <h3 class="position-absolute top-0 start-50 translate-middle-x">Contact</h3>
+            <h3 class="position-absolute top-0 end-0 mr-3">Locations</h3>
+        </div>
+        <div class="card-body" style="height: 150px;">
+          <div class="position-absolute top-50 start-0 translate-middle-y ml-3">
+            <p class="card-text"></p>
+          </div>
+          <div class="position-absolute top-50 start-50 translate-middle">
+            <a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+              </svg>
+            </a>
+            <a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+              </svg>
+            </a>
+            <a onclick="email()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+              </svg>
+            </a>
+            <a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone-fill" viewBox="0 0 16 16">
+                <path d="M3 2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V2zm6 11a1 1 0 1 0-2 0 1 1 0 0 0 2 0z"/>
+              </svg>
+            </a>
+          </div>
+          <div class="position-absolute top-50 end-0 translate-middle-y mr-3">
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+  <script src="contact.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+  </body>
 </html>
