--- a/about_us.html
+++ b/about_us.html
@@ -49,7 +49,7 @@
     </div>
 
 
-    <footer>
+    <footer class="mt-5">
       <div class="card info">
         <div class="card-header" style="height: 50px;">
             <h3 class="position-absolute top-0 start-0 ml-3">FAQs</h3>
@@ -58,7 +58,7 @@
         </div>
         <div class="card-body" style="height: 150px;">
           <div class="position-absolute top-50 start-0 translate-middle-y ml-3">
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"></p>
           </div>
           <div class="position-absolute top-50 start-50 translate-middle">
             <a>
@@ -83,7 +83,7 @@
             </a>
           </div>
           <div class="position-absolute top-50 end-0 translate-middle-y mr-3">
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <p></p>
           </div>
         </div>
       </div>
