--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
     </div>
 
-    <footer>
+    <footer  class="mt-5">
       <div class="card info">
         <div class="card-header" style="height: 50px;">
             <h3 class="position-absolute top-0 start-0 ml-3">FAQs</h3>
