changed contact info

--- a/index.html
+++ b/index.html
@@ -916,13 +916,13 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>ToastToBoastMail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 623 466 1999</p>
               </div>
 
             </div>
